# test-task-trlogic

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
libs/opencv/: Cargo.toml
test-task-trlogic/: Cargo.toml
test-task-trlogic/assets/web/view/: main_page.html
test-task-trlogic/config/: config.yaml
test-task-trlogic/src/: application.rs  domain.rs  infrastructure.rs  main.rs  presentation.rs  system.rs
test-task-trlogic/src/application/: factory.rs  service.rs
test-task-trlogic/src/application/factory/: named_file_factory.rs
test-task-trlogic/src/application/service/: url_generator.rs
test-task-trlogic/src/domain/: di.rs  model.rs  service.rs  utils.rs
test-task-trlogic/src/domain/di/: macros.rs  service.rs  service_builder.rs  service_ref.rs
test-task-trlogic/src/domain/factory/: named_file_factory.rs
test-task-trlogic/src/domain/model/: application_config.rs  data_uri.rs  downloaded_file.rs  file.rs  file_id.rs  image_convert_config.rs  mime_type.rs  path_resolve.rs  temp_file_path.rs  uploaded_file.rs  url.rs
test-task-trlogic/src/domain/repository/: file_repository.rs
test-task-trlogic/src/domain/service/: file_downloading.rs  filename_generator.rs  image_converter.rs  mime_type_detector.rs  url_generator.rs
test-task-trlogic/src/domain/utils/: get_content_type.rs
test-task-trlogic/src/infrastructure/: model.rs  service.rs
test-task-trlogic/src/infrastructure/model/: domain.rs  other.rs
test-task-trlogic/src/presentation/: web.rs
test-task-trlogic/src/system/: app_container.rs  runtime.rs  web_app_container.rs
(+61 files in other folders)
